fix a bug where the highlight was pushing text over

--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@ body{
 }
 
 
-#NextToOverlay{
-    position:relative;
-    left:-50%;
+.NextToOverlay{
+    position: relative;
+    left: -25%
 }
 
 
